--- a/app/View/admin/absent/home.html
+++ b/app/View/admin/absent/home.html
@@ -1,39 +1,46 @@
-<div class="overlay-background">
+<div class="overlay-background"></div>
+
+<footer>
     <div class="col-md-12 text-center mb-3 mt-3">
 
-        <div class="mr-2 mb-5" style="display: inline-block; background-color: #FFF; border:2px solid #000; border-radius: 1rem; width: 15rem;">
-            <p class="mt-2" style="color: #000; font-weight: bold;">عدد الحاضرين</p>
+        <div class="mr-2 mb-5 cardaia">
+            <p class="mt-2">عدد الحاضرين</p>
             <hr>
-            <span style="color: green; font-size: 30px; font-weight: bold;">20</span>
+            <span class="green">20</span>
         </div>
-        <div class="mr-2" style="display: inline-block; background-color: #FFF; border:2px solid #000; border-radius: 1rem;width: 15rem;">
-            <p class="mt-2" style="color: #000; font-weight: bold;">عدد الغائبين</p>
-            <hr>
-            <span style="color: red; font-size: 30px; font-weight: bold;">20</span>
+        <div class="mr-2 cardaia">
+            <p class="mt-2">
+                <p>عدد الغائبين</p>
+                <hr>
+                <span class="red">20</span>
         </div>
     </div>
 
     <div class="container">
-        <div style="z-index: 3 !important;">
+        <div class="the-container">
 
-            <table id="myTable" class="display nowrap" style="width:100%">
+            <table id="myTable" class="display nowrap">
                 <thead>
                     <tr>
                         <th>اسم الطالب</th>
                         <th>الحالة</th>
+                        <th>المجموعة</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td class="cheque-amt">حازم مسعد</td>
-                        <td style="color: green;">حاضر</td>
+                        <td class="attend">حاضر</td>
+                        <td>المجموعة كذا</td>
                     </tr>
                     <tr>
                         <td class="cheque-amt">الاستاذ معوض</td>
-                        <td style="color: red;">غائب</td>
+                        <td class="absent">غائب</td>
+                        <td>المجموعة كذا</td>
+
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
-</div>
+</footer>
