--- a/app/View/admin/exam/home.html
+++ b/app/View/admin/exam/home.html
@@ -1,65 +1,6 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<div class="container the-container">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrab.min.css">
-    <link rel="stylesheet" href="css/style2.css">
-    <link rel="stylesheet" href="fonts/Tajawal-Light.ttf">
-    <link rel="stylesheet" href="fonts/Tajawal-Bold.ttf">
-    <title>Document</title>
-</head>
-
-<body>
-    <div class="overlay-background">
-
-        <div style="z-index: 5 !important;">
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">الأستاذ معوض</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav float-right text-right">
-                        <a class="nav-link active" href="/admin/examsBank">بنك الأسألة <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="/admin/exam/home">الإمتحانات</a>
-                        <a class="nav-link" href="/admin/student">الطلاب</a>
-                        <a class="nav-link" href="/admin/levels">المراحل</a>
-                        <a class="nav-link" href="/admin/groups">المجموعات</a>
-                        <a class="nav-link" href="/admin/absent">الغياب</a>
-                        <a class="nav-link" href="/admin/membership">الشهر</a>
-                        <a class="nav-link" href="/admin/secretary">المشرفين</a>
-                        <div class="dropdown">
-                            <button style="color: #FFF;" class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						خيارات
-					</button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل</a>
-                                <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تاني</a>
-                                <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تالت</a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </nav>
-            <div style="margin-top: 20vh !important;" class="container">
-                <div style="width: calc(91%/3) !important; margin-right: 1.5% !important; margin-right: 1.5% !important;">
-                    <a href="/admin/exam/add">انشاء</a>
-                </div>
-                <div style="width: calc(91%/3) !important; margin-right: 1.5% !important; margin-right: 1.5% !important;">
-                    <a href="/admin/exam/add">تخصيص</a>
-                </div>
-                <div style="width: calc(91%/3) !important; margin-right: 1.5% !important; margin-right: 1.5% !important;">
-                    <a href="/admin/exam/add">النتائج</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="js/jQuery.js"></script>
-    <script src="js/bootstrab.min.js"></script>
-</body>
-
-</html>
+    <div class="internal-home text-center" onclick="location.href='/admin/exam/add'">تخصيص</div>
+    <div class="internal-home text-center" onclick="location.href='/admin/exam/add'">إنشاء</div>
+    <div class="internal-home text-center" onclick="location.href='/admin/exam/add'">النتائج</div>
+</div>
