--- a/app/View/nav.html
+++ b/app/View/nav.html
@@ -1,34 +1,3 @@
-<!-- <ul class="nav justify-content-center" style="background-color: silver;">
-
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/levels">المراحل</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/groups">المجموعات</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/secretary">المشرفين</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/student">الطلاب</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/examsBank">بنك الاسالة</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/exam/home">الامتحانات</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/membership">الشهر</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin/absent">الغياب</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/admin">الرئيسية</a>
-    </li>
-
-</ul> -->
 <!DOCTYPE html>
 <html lang="en">
 <style>
@@ -61,37 +30,46 @@
     .navbar-brand {
         font-weight: 300 !important;
     }
+    
+    .dropdown-item {
+        color: #000 !important;
+    }
+    
+    .dropdown-toggle {
+        color: #fff;
+    }
+    
+    footer {
+        margin-top: 20vh;
+    }
 </style>
+</head>
 
 <body>
     <nav class="navbar navbar-expand-lg new-nav">
         <a class="navbar-brand" href="#">الأستاذ معوض</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+			<span class="navbar-toggler-icon"></span>
+		</button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav float-right text-right">
-                <a class="nav-link active" href="#">بنك الأسألة <span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#">الإمتحانات</a>
-                <a class="nav-link" href="#">الطلاب</a>
-                <a class="nav-link" href="#">المراحل</a>
-                <a class="nav-link" href="#">المجموعات</a>
-                <a class="nav-link" href="#">الغياب</a>
-                <a class="nav-link" href="#">الشهر</a>
-                <a class="nav-link" href="#">المشرفين</a>
+                <a class="nav-link active" href="/admin/examsBank">بنك الأسألة <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/admin/exam/home">الإمتحانات</a>
+                <a class="nav-link" href="/admin/student">الطلاب</a>
+                <a class="nav-link" href="/admin/levels">المراحل</a>
+                <a class="nav-link" href="/admin/groups">المجموعات</a>
+                <a class="nav-link" href="/admin/absent">الغياب</a>
+                <a class="nav-link" href="/admin/membership">الشهر</a>
+                <a class="nav-link" href="/admin/secretary">المشرفين</a>
                 <div class="dropdown">
-                    <button style="color: #FFF;" class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                خيارات
-              </button>
+                    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						خيارات
+					</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل</a>
-                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تاني</a>
-                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تالت</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تغيير اللغة</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل الخروج</a>
                     </div>
                 </div>
             </div>
         </div>
     </nav>
-</body>
-
-</html>
