--- a/app/static/css/style4.css
+++ b/app/static/css/style4.css
@@ -3,25 +3,39 @@ body {
     background-image: url("/app/static/images/inside-system.jpg") !important;
 }
 
-body .overlay-background {
-    background-color: #00000057;
-    min-width: 100vw;
+body section {
+    position: relative;
     min-height: 100vh;
-    z-index: 2;
 }
 
-body .overlay-background nav {
-    margin-bottom: 5rem;
-    color: #FFF !important;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.45) 50%, rgba(0, 0, 0, 0.19) 100%) !important;
+body section .overlay-background {
+    position: absolute;
+    z-index: 1;
+    background-color: #00000057;
+    min-height: 100vh;
+    top: 0;
+    left: 0;
 }
 
-body .overlay-background nav a {
-    color: #FFF !important;
-    font-weight: lighter !important;
+body section .the-container {
+    z-index: 3 !important;
 }
 
-body .overlay-background img {
+body section .the-container .display {
+    width: 100%;
+}
+
+body section .the-container .attend {
+    color: #2ae72a;
+    font-weight: bold;
+}
+
+body section .the-container .absent {
+    color: red;
+    font-weight: bold;
+}
+
+body section .the-container img {
     display: inline-block;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -30,7 +44,7 @@ body .overlay-background img {
     height: 50px;
 }
 
-body .overlay-background .inputfile {
+body section .the-container .inputfile {
     width: 0.1px;
     height: 0.1px;
     opacity: 0;
@@ -39,7 +53,7 @@ body .overlay-background .inputfile {
     z-index: -1;
 }
 
-body .overlay-background .inputfile+label {
+body section .the-container .inputfile+label {
     font-size: 1.25em;
     color: white;
     width: 7rem;
@@ -50,59 +64,59 @@ body .overlay-background .inputfile+label {
     font-weight: lighter;
 }
 
-body .overlay-background .inputfile:focus+label,
-body .overlay-background .inputfile+label:hover {
+body section .the-container .inputfile:focus+label,
+body section .the-container .inputfile+label:hover {
     background-color: #FFF;
     color: #000;
 }
 
-body .overlay-background .inputfile+label {
+body section .the-container .inputfile+label {
     cursor: pointer;
     /* "hand" cursor */
 }
 
-body .overlay-background .fa-filter {
+body section .the-container .fa-filter {
     font-family: "tajawal" !important;
 }
 
-body .overlay-background .dataTables_filter {
+body section .the-container .dataTables_filter {
     color: #FFF !important;
 }
 
-body .overlay-background .dataTables_filter input {
+body section .the-container .dataTables_filter input {
     color: #FFF !important;
 }
 
-body .overlay-background .dataTables_wrapper .dataTables_paginate .paginate_button.disabled,
-body .overlay-background .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover,
-body .overlay-background .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
+body section .the-container .dataTables_wrapper .dataTables_paginate .paginate_button.disabled,
+body section .the-container .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover,
+body section .the-container .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
     color: #FFF !important;
 }
 
-body .overlay-background .dataTables_info {
+body section .the-container .dataTables_info {
     color: #FFF !important;
 }
 
-body .overlay-background .sorting_desc,
-body .overlay-background .sorting {
+body section .the-container .sorting_desc,
+body section .the-container .sorting {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     color: #000 !important;
     background-color: #fff;
 }
 
-body .overlay-background .sorting_asc {
+body section .the-container .sorting_asc {
     background-color: #fff;
     color: #080;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
 }
 
-body .overlay-background .dt-button {
+body section .the-container .dt-button {
     background-color: #FFF !important;
 }
 
-body .overlay-background table {
+body section .the-container table {
     border-left: 1px solid;
     border-right: 1px solid;
     border-top: 1px solid;
